--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  background-color: darkslategrey;
+  width:100%;
+  height:100vh;
+  display: grid;
+  place-items: center;
 }
 
 .App-logo {
